--- a/packages/fluent/scss/window/_layout.scss
+++ b/packages/fluent/scss/window/_layout.scss
@@ -58,10 +58,8 @@
         overflow: hidden;
         cursor: default;
         flex: 1;
-        display: flex;
-        flex-flow: row nowrap;
 
-        &::before {
+        &:empty::before {
             content: "\200b";
         }
     }
